--- a/files_andere/contact.html
+++ b/files_andere/contact.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-  <body>
-
-  </body>
+<html>
+<link rel="stylesheet" href="../gemeenteStyle.css">
+        <body>
+            <div class="navigatie">
+                <nav>
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa-bars"></i>
+                    </label>
+                    <ul>
+                        <li><a href="../login/login.php">login</a></li>
+                        <li><a href="#">Klachten</a></li>
+                        <li><a href="#">Random</a></li>
+                        <li><a href="#">Kaart</a></li>
+                        <li><a href="../index.php">Home</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </body>
+    <footer>
+            <div class="footer_rotterdam"> Gemeente <br> Rotterdam
+            </div>
+            <div class="contact">
+                <a href="../files_andere/contact.html">Contact</a>
+            </div>
+    </footer>
 </html>
