--- a/files_andere/contact.html
+++ b/files_andere/contact.html
@@ -3,25 +3,17 @@
         <body>
             <div class="navigatie">
                 <nav>
-                    <input type="checkbox" id="check">
-                    <label for="check" class="checkbtn">
-                        <i class="fa-bars"></i>
-                    </label>
-                    <ul>
-                        <li><a href="../login/login.php">login</a></li>
-                        <li><a href="#">Klachten</a></li>
-                        <li><a href="#">Random</a></li>
-                        <li><a href="#">Kaart</a></li>
-                        <li><a href="../index.php">Home</a></li>
-                    </ul>
+                        <img src="../image/logo_rotterdam.svg" id=logo alt="logo van Gemeente Rotterdam"/>
+                        <a href="../login/login.php">login</a>
+                        <a href="#">Klachten</a>
+                        <a href="#">Random</a>
+                        <a href="#">Kaart</a>
+                        <a href="../index.php">Home</a>
                 </nav>
             </div>
         </body>
     <footer>
             <div class="footer_rotterdam"> Gemeente <br> Rotterdam
-            </div>
-            <div class="contact">
-                <a href="../files_andere/contact.html">Contact</a>
             </div>
     </footer>
 </html>
