--- a/files_andere/contact.html
+++ b/files_andere/contact.html
@@ -11,6 +11,10 @@
                         <a href="../index.php">Home</a>
                 </nav>
             </div>
+        <p>
+           Contact opnemen met de gemeente van Rotterdam? <br>
+
+        </p>
         </body>
     <footer>
             <div class="footer_rotterdam"> Gemeente <br> Rotterdam
