--- a/files_andere/contact.html
+++ b/files_andere/contact.html
@@ -6,12 +6,15 @@
                         <img src="../image/logo_rotterdam.svg" id=logo alt="logo van Gemeente Rotterdam"/>
                         <a href="../login/login.php">login</a>
                         <a href="#">Klachten</a>
-                        <a href="#">Random</a>
-                        <a href="#">Kaart</a>
+                        <a href="../geolocation/map.php">Kaart</a>
                         <a href="../index.php">Home</a>
                 </nav>
             </div>
         </body>
+        <p>
+            Om contact te krijgen met Gemeente Rotterdam bel dan gerust naar het telefoonnumer 06-89264536. <br>
+            Is bellen geen optie voor u? E-mail dan gerust naar het e-mailadres GemeenteRotterdam@gemeente.nl
+        </p>
     <footer>
             <div class="footer_rotterdam"> Gemeente <br> Rotterdam
             </div>
