--- a/files_andere/contact.html
+++ b/files_andere/contact.html
@@ -6,7 +6,7 @@
                         <img src="../image/logo_rotterdam.svg" id=logo alt="logo van Gemeente Rotterdam"/>
                         <a href="../login/login.php">login</a>
                         <a href="../klacht/klachtMenu.php">Klachten</a>
-                        <a href="../geolocation/map.php">Kaart</a>
+                        <a href="../geolocation/map.php">Map</a>
                         <a href="../index.php">Home</a>
                 </nav>
             </div>
